[tool.poetry]
name = "rain-alert"
version = "0.1.0"
description = ""
authors = ["Olena <155203553+elgatoafk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
twilio = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
